@@ -18,8 +18,7 @@ verbose = FALSE,
 
 \value{A list of extracted documentation from code.}
 
-\author{Inlinedocs development team
-<inlinedocs-support@lists.r-forge.r-project.org>}
+\author{Inlinedocs development team <inlinedocs-support@lists.r-forge.r-project.org>}
 
 
 
