@@ -12,8 +12,7 @@ kill.prefix.whitespace(ex)
 
 \value{Character vector of code lines with preceding whitespace removed.}
 
-\author{Inlinedocs development team
-<inlinedocs-support@lists.r-forge.r-project.org>}
+\author{Inlinedocs development team <inlinedocs-support@lists.r-forge.r-project.org>}
 
 
 
